# exposeee-api

./: .env.example  .gitignore  Dockerfile  Makefile  compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
core/: adapter.py  admin.py  api.py  consumers.py  jobs.py  models.py  routing.py  serializers.py  tests.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20210123_2115.py  0003_auto_20210127_2105.py  0004_auto_20210127_2107.py  0005_exposeuser.py  0006_custom_20211203_0001.py  0007_auto_20211213_2142.py  0008_expose_text.py
core/templates/account/email/: email_confirmation_message.txt  password_reset_key_message.txt
exposeee_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  settings.py
tests/models/: conftest.py  test_expose.py
tests/views/: conftest.py  test.pdf.fixture  test_view.py
